fix image on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@
 }
 
 .textOnImage {
-  @apply pl-3 text-right text-xl pr-3 pt-3
-  prose-a:underline;
+  @apply text-right text-base text-gray-700 leading-snug
+  pl-2 pr-2 pt-12
+  prose-a:underline z-50;
 }
