--- a/styles/swiper.css
+++ b/styles/swiper.css
@@ -33,8 +33,15 @@ body {
   width: 100%;
   height: 100%;
 }
+
 .swiper-slide {
   width: auto;
+}
+
+@media screen and (max-width: 640px) {
+  .swiper-slide {
+    width: 100%;
+  }
 }
 
 .swiper-slide {
